--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,6 +16,7 @@
         <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="0">
             <Button Click="ShowPassesList_Click" FontSize="17" Margin="0 0 0 10" Cursor="UpArrow" Width="200" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center">Список пропусков</Button>
             <Button Click="ShowVisitsList_Click" FontSize="17" Margin="0 0 0 10" Width="200" Height="40" Cursor="UpArrow" VerticalAlignment="Center" HorizontalAlignment="Center">Список посещений</Button>
+            <Button Click="ShowPassManager_Click" FontSize="17" Margin="0 0 0 10" Width="200" Height="40" Cursor="UpArrow" VerticalAlignment="Center" HorizontalAlignment="Center">Управление пропуском</Button>
         </StackPanel>
     </Grid>
 </Window>
